app/assets/stylesheets/base/_buttons.scss
$button-vertical-padding: 7px;
%button {
  padding: $button-vertical-padding 10px;
  text-transform: uppercase;
  font-size: 0.867rem;
  border-radius: $default-border-radius;
  background: transparent;
  border: none;
  outline: none;
  text-decoration: none;
  display: inline-block;
  line-height: 1;
  font-weight: $normal-weight;
  text-align: center;
  box-sizing: border-box;
  &:visited {
    color: inherit;
  }
}

.primary-button {
  @extend %button;
  color: $white;
  background-color: $actionable-blue;
  &[disabled] {
    background-color: $secondary-gray;
  }
}

.secondary-button {
  @extend %button;
  color: $text-color;
  background-color: $secondary-gray;
}

.total-button {
  @extend .primary-button;
  text-transform: none;
  width: 100%;
  text-align: justify;
  span:first-child {
    float: left;
  }
  span:last-child {
    float: right;
  }
}

.edit-button {
  @extend %button;
  background-color: $secondary-gray;
  float: right;
  &:before {
    display: inline-block;
    padding-right: 5px;
    @extend %icon-font;
    content: "#{$icon-edit}";
  }
}

%down-button-after {
  display: inline-block;
  @extend %icon-font;
  content: "#{$icon-chevron}";
  padding-left: 5px;
  font-size: 0.733rem;
}

.down-button {
  @extend %button;
  color: $actionable-blue;
  &:after {
    @extend %down-button-after;
  }
}

.more-button {
  &:after {
    @extend %icon-font;
    content: " #{$icon-arrow-right}";
  }
}

.save-button {
  @extend %button;
  font-size: 1rem;
  padding: 10px 0;
  width: 2 * $grid-column-width + $gutter-width;
  float: right;
}

.report-button-left {
  @extend .primary-button;
}

.split-button-left {
  @extend .primary-button;
  border-bottom-left-radius: $default-border-radius;
  border-top-left-radius: $default-border-radius;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  vertical-align: top;
}

.split-button {
  font-size: 0; // get rid of whitespace between buttons
}

$split-button-height:   27px;
.split-button-right {
  &.dropdown {
    &:after {
      @extend %down-button-after;
      background-color: transparent;
      color: $actionable-blue;
    }
    width: auto;
    height: auto;
    line-height: 1;
    .dropdown-selection {
      width: auto;
      height: auto;
      border-bottom-left-radius: 0;
      border-top-left-radius: 0;
      color: $actionable-blue;
      height: $split-button-height;
      padding-top: 0;
      padding-bottom: 0;
    }
    ul {
      top: $split-button-height;
      overflow: hidden;
    }
  }
  &:not(.dropdown) {
    @extend .down-button;
    border-bottom-right-radius: $default-border-radius;
    border-top-right-radius: $default-border-radius;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    vertical-align: bottom;
    border: 1px solid $actionable-blue;
    padding-bottom: $button-vertical-padding - 1px;
    padding-top: $button-vertical-padding - 1px;
  }
}

